chore: public css-normalize release

--- a/packages/css-normalize/example.html
+++ b/packages/css-normalize/example.html
@@ -15,7 +15,7 @@
         <code>normalize.css</code>.<br />
       </p>
     </header>
-  <hr>
+    <hr />
     <main>
       <section>
         <h2>Headings &amp; Paragraphs</h2>
@@ -26,7 +26,8 @@
         <h5>Heading 5</h5>
         <h6>Heading 6</h6>
         <p>
-          This is a great paragraph, perhaps the best paragraph. What a marvelous paragraph.
+          This is a great paragraph, perhaps the best paragraph. What a
+          marvelous paragraph.
         </p>
         <p>
           <strong>Bold</strong>, <em>emphasis</em>, <b>b</b>, <i>i</i>,
@@ -142,7 +143,6 @@
           <h1>This is a dialog</h1>
           <button onclick="this.parentElement.close()">Close Dialog</button>
         </dialog>
-        
       </section>
     </main>
     <footer>
@@ -154,12 +154,12 @@
       </p>
     </footer>
   </body>
-          <script>
-          // Example of using the dialog element
-          const dialog = document.getElementById('a-dialog');
-          const button = document.querySelector('.open-button');
-          button.onclick = () => {
-            dialog.showModal();
-          };
-        </script>
+  <script>
+    // Example of using the dialog element
+    const dialog = document.getElementById("a-dialog");
+    const button = document.querySelector(".open-button");
+    button.onclick = () => {
+      dialog.showModal();
+    };
+  </script>
 </html>
