--- a/packages/css-normalize/example.html
+++ b/packages/css-normalize/example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>normalize.css Minimal Example &amp; Showcase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./src/normalize.css" />
+    <link rel="stylesheet" href="./src/static/normalize.css" />
   </head>
   <body>
     <header>
