feat(css-normalize): update package
add css compilation to reduce redundancy (lightningcss) and improve semantic organization, add
weight prefix to font weight vars (--weight-\*), section/organize css file, updates docs, update
build process, add default styling to more elements.

BREAKING CHANGE: font weight vars now use have a --weight-* prefix

--- a/packages/css-normalize/example.html
+++ b/packages/css-normalize/example.html
@@ -10,7 +10,7 @@
     <header>
       <h1>normalize.css Example &amp; Showcase</h1>
       <p>
-        This page demonstrates the
+        <mark>MARKED This page demonstrates the</mark>
         <strong>default browser behavior</strong> after applying
         <code>normalize.css</code>.<br />
       </p>
